@@ -133,23 +133,24 @@ foreach(MODULE IN LISTS MODULES)
 endforeach(MODULE)
 
 list(APPEND PUB_HDRS ${CMAKE_CURRENT_SOURCE_DIR}/basedefs.h
-                     ${CMAKE_CURRENT_SOURCE_DIR}/iowow.h
-                     ${CMAKE_CURRENT_SOURCE_DIR}/log/iwlog.h
                      ${CMAKE_CURRENT_SOURCE_DIR}/fs/iwdlsnr.h
-                     ${CMAKE_CURRENT_SOURCE_DIR}/fs/iwfile.h
                      ${CMAKE_CURRENT_SOURCE_DIR}/fs/iwexfile.h
+                     ${CMAKE_CURRENT_SOURCE_DIR}/fs/iwfile.h
                      ${CMAKE_CURRENT_SOURCE_DIR}/fs/iwfsmfile.h
-                     ${CMAKE_CURRENT_SOURCE_DIR}/rdb/iwrdb.h
+                     ${CMAKE_CURRENT_SOURCE_DIR}/iowow.h
                      ${CMAKE_CURRENT_SOURCE_DIR}/kv/iwkv.h
+                     ${CMAKE_CURRENT_SOURCE_DIR}/log/iwlog.h
                      ${CMAKE_CURRENT_SOURCE_DIR}/platform/iwp.h
+                     ${CMAKE_CURRENT_SOURCE_DIR}/rdb/iwrdb.h
+                     ${CMAKE_CURRENT_SOURCE_DIR}/utils/iwarr.h
+                     ${CMAKE_CURRENT_SOURCE_DIR}/utils/iwbits.h
+                     ${CMAKE_CURRENT_SOURCE_DIR}/utils/iwconv.h
+                     ${CMAKE_CURRENT_SOURCE_DIR}/utils/iwpool.h
+                     ${CMAKE_CURRENT_SOURCE_DIR}/utils/iwstree.h
+                     ${CMAKE_CURRENT_SOURCE_DIR}/utils/iwth.h
                      ${CMAKE_CURRENT_SOURCE_DIR}/utils/iwutils.h
                      ${CMAKE_CURRENT_SOURCE_DIR}/utils/iwuuid.h
-                     ${CMAKE_CURRENT_SOURCE_DIR}/utils/iwth.h
                      ${CMAKE_CURRENT_SOURCE_DIR}/utils/iwxstr.h
-                     ${CMAKE_CURRENT_SOURCE_DIR}/utils/iwconv.h
-                     ${CMAKE_CURRENT_SOURCE_DIR}/utils/iwbits.h
-                     ${CMAKE_CURRENT_SOURCE_DIR}/utils/iwarr.h
-                     ${CMAKE_CURRENT_SOURCE_DIR}/utils/iwpool.h
                      )
 
 list(REMOVE_DUPLICATES PROJECT_LLIBRARIES)
