@@ -7,6 +7,7 @@ iowow (1.3.37) UNRELEASED; urgency=medium
   * Removed IW_EXPORT iwrc iwkv_db_last_access_time(IWDB db, uint64_t *ts)
     for performance and simplicity reasons
   * Added `IW_ERROR_INVALID_VALUE`
+  * Added iwstree - splay tree imlementation (iwstree.h)
 
  -- Anton Adamansky <adamansky@gmail.com>  Wed, 22 Jan 2020 22:42:51 +0700
 
